Fixed bug where HOME in navbar would be selected when projectViewer is visible.

--- a/src/Components/common/ProjectViewer.css
+++ b/src/Components/common/ProjectViewer.css
@@ -50,3 +50,7 @@
     text-align: center;
   }
 }
+
+.ReactModal__Body--open {
+  overflow-y: hidden;
+}
